alpm-types/src/snapshots/openpgp::invalid_packager@case_4_two_wrapped_addresses.snap
---
source: alpm-types/src/openpgp.rs
---
Parser failed with the following error:
Foobar McFooface <foobar@mcfooface.org> <foobar@mcfoofacemcfooface.org>
                                       ^
expected end of packager string
